@@ -1,5 +1,5 @@
 let rec f x =
-  if x land 0xFFFF <> 0
+  if not (x = 0 || x = 10000 || x = 20000)
   then 1 + f (x + 1)
   else
     try
